--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -20,5 +20,11 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Cache posted file
+        uses: actions/cache@v3
+        with:
+          path: posted_news_ids.json
+          key: posted-cache-news-${{ github.ref }}
+
       - name: Run news bot
         run: python news_bot.py
