--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -12,6 +12,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Download posted_news_ids.json
+        uses: actions/download-artifact@v4
+        with:
+          name: news-cache
+        continue-on-error: true
+
+      - name: Create fallback posted_news_ids.json if missing
+        run: |
+          if [ -f posted_news_ids.json ]; then
+            echo "✅ posted_news_ids.json found"
+          else
+            echo "{}" > posted_news_ids.json
+          fi
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -20,11 +34,11 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Cache posted file
-        uses: actions/cache@v3
-        with:
-          path: posted_news_ids.json
-          key: posted-cache-news-${{ github.ref }}
-
       - name: Run news bot
         run: python news_bot.py
+
+      - name: Upload updated posted_news_ids.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: news-cache
+          path: posted_news_ids.json
