--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -8,22 +8,21 @@ on:
 jobs:
   run-news-bot:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download posted_news_ids.json
-        uses: actions/download-artifact@v4
+      - name: Restore posted_news_ids.json from cache
+        uses: actions/cache@v3
         with:
-          name: news-cache
-        continue-on-error: true
+          path: posted_news_ids.json
+          key: posted-news-key
 
-      - name: Create fallback posted_news_ids.json if missing
+      - name: Ensure posted_news_ids.json exists
         run: |
-          if [ -f posted_news_ids.json ]; then
-            echo "✅ posted_news_ids.json found"
-          else
-            echo "{}" > posted_news_ids.json
+          if [ ! -f posted_news_ids.json ]; then
+            echo "[]" > posted_news_ids.json
           fi
 
       - name: Set up Python
@@ -37,8 +36,3 @@ jobs:
       - name: Run news bot
         run: python news_bot.py
 
-      - name: Upload updated posted_news_ids.json
-        uses: actions/upload-artifact@v4
-        with:
-          name: news-cache
-          path: posted_news_ids.json
